--- a/conference-service/src/main/resources/application.properties
+++ b/conference-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=conference-service
-service.port=8082
+server.port=8082
 spring.datasource.url=jdbc:h2:mem:conference-db
 spring.h2.console.enabled = true
-spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.enabled=false
 spring.cloud.config.enabled=false
 spring.data.rest.base-path=/api
 management.endpoints.web.exposure.include=*
