--- a/keynote-service/src/main/resources/application.properties
+++ b/keynote-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=keynote-service
-service.port=8081
+server.port=8081
 spring.datasource.url=jdbc:h2:mem:keynote-db
 spring.h2.console.enabled = true
 spring.cloud.config.discovery.enabled=true
