--- a/conference-service/src/main/resources/application.properties
+++ b/conference-service/src/main/resources/application.properties
@@ -1,11 +1,4 @@
 spring.application.name=conference-service
 server.port=8082
-spring.datasource.url=jdbc:h2:mem:conference-db
-spring.h2.console.enabled = true
-spring.cloud.config.discovery.enabled=false
-spring.cloud.config.enabled=false
-spring.data.rest.base-path=/api
-management.endpoints.web.exposure.include=*
-eureka.client.server-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.prefer-ip-address=false
+spring.config.import=optional:configserver:http://localhost:9999
 
