--- a/keynote-service/src/main/resources/application.properties
+++ b/keynote-service/src/main/resources/application.properties
@@ -1,10 +1,3 @@
 spring.application.name=keynote-service
 server.port=8081
-spring.datasource.url=jdbc:h2:mem:keynote-db
-spring.h2.console.enabled = true
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.enabled=false
-spring.data.rest.base-path=/api
-management.endpoints.web.exposure.include=*
-eureka.client.server-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.prefer-ip-address=false
+spring.config.import=optional:configserver:http://localhost:9999
